--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,19 +1,22 @@
 :root {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    --header-color: rgba(0,0,0, .75);
+    --header-color: rgba(0, 0, 0, .75);
     --header-font-size: 4rem;
     --header-font-color: white;
 }
 
 body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     background-image: url("https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
     display: flex;
+
 }
 
+/* Header section */
 .page-half-1 {
-     width: min(50%, 35vw);
+    margin-top: 8em;
+    width: min(50%, 30vw);
 }
 
 #logo {
@@ -27,7 +30,43 @@ body {
     font-size: var(--header-font-size);
     display: flex;
     justify-content: center;
-   
     padding: 0.25em;
 }
 
+/* Side Section */
+
+.page-half-2 {
+    color: black;
+    width: max(50%, 70vw);
+    background-color: lightgrey;
+    height: 100vh; 
+}
+
+.main-info {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+   
+    gap: 1em;
+}
+
+.form-box {
+    background-color: white;
+    
+}
+
+.form-section {
+    margin: 2em;
+}
+
+.message-box {
+    margin-top: 3em;
+    font-size: 1.25rem;
+}
+
+.form-box,
+.submit-section {
+    width: 100%;
+    border: 2px solid black;
+}
