--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+:root {
+    --header-font-color: white;
+    --header-font-size: 5rem;
+    --header-background-color: rgba(0,0,0,.60);  
+}
+
 body {
     background-image: url("https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
     background-repeat: no-repeat;
@@ -12,8 +18,41 @@ body {
 
 .main-page {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: stretch;
+}
+
+
+/* Header Section */
+.header-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    color: var(--header-font-color); 
+    width: 30%;
     
 }
+
+img {
+    width: 75px;
+}
+
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--header-font-size);
+    background-color: var(--header-background-color);
+    padding: 0.1em;
+    
+   
+}
+
+.photo-creds {
+    position: absolute;
+    padding-bottom: 1em;
+    left: 8%;
+    bottom: 0;
+}
+
 
