--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,6 @@
-*, ::before, ::after {
+*,
+::before,
+::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,7 +9,7 @@
 :root {
     --header-font-color: white;
     --header-font-size: 5rem;
-    --header-background-color: rgba(0,0,0,.60);  
+    --header-background-color: rgba(0, 0, 0, .60);
     --text-button-background-color: #F0F0F0
 }
 
@@ -28,9 +30,9 @@ body {
     display: flex;
     flex-direction: column;
     color: var(--header-font-color);
-    margin-top: 10%; 
+    margin-top: 10%;
     width: 30%;
-    
+
 }
 
 img {
@@ -44,8 +46,8 @@ img {
     font-size: var(--header-font-size);
     background-color: var(--header-background-color);
     padding: 0.1em;
-    
-   
+
+
 }
 
 .photo-creds {
@@ -61,7 +63,7 @@ img {
 .main-content {
     display: flex;
     flex-direction: column;
-    font-family:'Calibri', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    font-family: 'Calibri', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
     height: 100vh;
     width: 70%;
     background-color: var(--text-button-background-color);
@@ -113,7 +115,7 @@ label {
     display: flex;
     flex-direction: column;
     gap: 2em;
-    
+
 }
 
 button {
@@ -127,4 +129,9 @@ button {
 
 input:invalid {
     border: 2px solid red;
+}
+
+input:focus {
+    border: 2px solid #E5E7EB;
+    box-shadow: 2px 4px 4px rgb(212, 212, 212);
 }
