--- a/styles/styles.css
+++ b/styles/styles.css
@@ -133,6 +133,11 @@ button {
     font-weight: bold;
 }
 
+button:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, .40);
+}
+
 input:invalid {
     border: 2px solid red;
 }
