Redo whole project

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 @font-face {
@@ -19,102 +20,107 @@
 }
 
 body {
-    background-image: url("https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
-    background-repeat: no-repeat;
-    background-size: 30% 100vh;
+    width: 100%;
+    height: 100%;
 }
+
 
 .main-page {
-    display: flex;
-    justify-content: space-between;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
 }
-
 
 /* Header Section */
-.header-container {
-    display: flex;
-    flex-direction: column;
-    color: var(--header-font-color);
-    margin-top: 10.75%;
-    width: 30%;
+header {
+    color: white;
+    grid-row: 1/-1;
+    background-image: url("https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
+    background-repeat: no-repeat;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 1fr;
+    align-content: space-between;
+
 
 }
 
-img {
-    width: 75px;
+#logo img {
+    height: 5rem;
+    width: 5rem;
 }
 
 .logo-container {
+    height: 100px;
+    margin-top: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: Norse, 'Times New Roman', Times, serif;
     font-size: var(--header-font-size);
     background-color: var(--header-background-color);
-    padding: 0.1em;
-
-
 }
 
 .photo-creds {
-    position: absolute;
-    padding-bottom: 1em;
-    left: 8%;
-    bottom: 0;
+    padding: 1em;
+    text-align: center;
 }
 
-
 /* Main Section */
-
 .main-content {
-    display: flex;
-    flex-direction: column;
+    grid-column: 2;
+    display: grid;
+    grid-template-rows: 1.1fr 1.25fr 0.75fr;
     font-family: 'Calibri', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
-    height: 100vh;
-    width: 70%;
     background-color: var(--text-button-background-color);
+
 }
 
 .main-text-container {
+    grid-row: 1;
+    align-self: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
+    padding-left: 2em;
+}
+
+.form-container {
+    grid-row: 2;
+    background-color: white;
+    box-shadow: 4px 4px 4px rgb(212, 212, 212);
     display: flex;
     flex-direction: column;
     gap: 1em;
-    height: 25%;
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-top: 10%;
-    padding: 0px 2em;
+    padding: 1em 2em;
 }
-
-
-
-.form-container {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    padding: 1.5em 2em;
-    gap: 0.5em;
-    box-shadow: 4px 4px 4px rgb(212, 212, 212);
-}
-
 
 form {
-    display: flex;
-    gap: 5em;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1em;
+
 }
 
+.form-col-1,
+.form-col-2 {
+    display: flex;
+    flex-direction: column;
 
-input {
-    width: 350px;
-    padding: 0.5em;
 }
 
 label {
-    font-size: 0.75rem;
+    padding-top: 1em;
+}
+
+input {
+    width: 21.875rem;
+    padding: 0.5em;
 }
 
 /* Button section */
-
 .button-container {
     padding-left: 2em;
     margin-top: 1em;
@@ -150,3 +156,4 @@ input:focus {
 label {
     text-transform: uppercase;
 }
+
